persist files done

--- a/Bodgitt and Scarper/suncertify.properties
+++ b/Bodgitt and Scarper/suncertify.properties
@@ -1,4 +1,4 @@
-dbLocation : 
-rmiPort : 
-rmiHost : 
-
+#Mon Oct 21 22:11:54 BST 2013
+port=
+host=
+database=C\:\\Users\\Garvey\\Google Drive\\Java\\SCJD\\mine\\db-2x3.db
