--- a/Bodgitt and Scarper/suncertify.properties
+++ b/Bodgitt and Scarper/suncertify.properties
@@ -1,4 +1,4 @@
-#Mon Oct 21 22:11:54 BST 2013
+#Tue Oct 22 15:15:09 BST 2013
 port=
 host=
-database=C\:\\Users\\Garvey\\Google Drive\\Java\\SCJD\\mine\\db-2x3.db
+database=C\:\\Users\\epagarv\\Google Drive\\Java\\SCJD\\mine\\db-2x3.db
