--- a/Bodgitt and Scarper/suncertify.properties
+++ b/Bodgitt and Scarper/suncertify.properties
@@ -1,4 +1,4 @@
-#Tue Oct 22 23:37:10 BST 2013
+#Wed Oct 23 16:11:27 BST 2013
 port=4566
 host=localhost
-database=C\:\\Users\\Garvey\\Google Drive\\Java\\SCJD\\mine\\db-2x3.db
+database=C\:\\Users\\epagarv\\Google Drive\\Java\\SCJD\\mine\\db-2x3.db
