--- a/Bodgitt and Scarper/suncertify.properties
+++ b/Bodgitt and Scarper/suncertify.properties
@@ -1,4 +1,4 @@
-#Sun Oct 27 00:14:08 BST 2013
+#Mon Oct 28 09:51:08 GMT 2013
 port=4566
 host=localhost
 database=C\:\\Users\\Garvey\\Google Drive\\Java\\SCJD\\mine\\db-2x3.db
