Nearly done java docs

--- a/Bodgitt and Scarper/suncertify.properties
+++ b/Bodgitt and Scarper/suncertify.properties
@@ -1,4 +1,4 @@
-#Wed Oct 30 15:52:46 GMT 2013
+#Wed Oct 30 22:25:33 GMT 2013
 port=4566
 host=localhost
-database=C\:\\Users\\epagarv\\Google Drive\\Java\\SCJD\\mine\\db-2x3.db
+database=C\:\\Users\\Garvey\\Google Drive\\Java\\SCJD\\mine\\db-2x3.db
